src/snapshots/threema_gateway_bot__commands__tests__help_text__with_custom_commands.snap
---
source: src/commands.rs
expression: "reg.help_text(&HelpVisibility::all())"
---
*Available Commands:*

*/help* - _Show this help message_
*/remind* - _Set a reminder_
*/list* - _List your reminders_
