src/snapshots/threema_gateway_bot__commands__tests__help_text__with_description.snap
---
source: src/commands.rs
expression: "reg.help_text(&HelpVisibility::all())"
---
My cool bot.

*Available Commands:*

*/help* - _Show this help message_
