src/snapshots/threema_gateway_bot__commands__tests__help_text__with_groups_word_style.snap
---
source: src/commands.rs
expression: "reg.help_text(&HelpVisibility::all())"
---
Available Commands:

help - Show this help message
echo - Echo back text
ping - Check if bot is alive

*Admin commands:*

restart - Restart the bot
kick - Remove a user
