src/snapshots/threema_gateway_bot__commands__tests__help_text__with_hidden_group.snap
---
source: src/commands.rs
expression: "reg.help_text(&HelpVisibility::all().hide_group(\"admin\"))"
---
Available Commands:

/help - Show this help message
/echo - Echo back text
/ping - Check if bot is alive
