src/snapshots/threema_gateway_bot__commands__tests__help_text__with_hidden_ungrouped_command.snap
---
source: src/commands.rs
expression: "reg.help_text(&HelpVisibility::all().hide_command(\"ping\"))"
---
*Available Commands:*

*/help* - _Show this help message_
*/echo* - _Echo back text_

Admin commands:

*/restart* - _Restart the bot_
*/kick* - _Remove a user_
