src/snapshots/threema_gateway_bot__commands__tests__help_text__with_none_visibility.snap
---
source: src/commands.rs
expression: "reg.help_text(&HelpVisibility::none())"
---
*Available Commands:*

*/help* - _Show this help message_
