src/snapshots/threema_gateway_bot__commands__tests__help_text__with_prelude.snap
---
source: src/commands.rs
expression: "reg.help_text_with_prelude(Some(\"Unknown command: /foo\"),\n&HelpVisibility::all())"
---
Unknown command: /foo

---

*Available Commands:*

*/help* - _Show this help message_
