src/snapshots/threema_gateway_bot__commands__tests__help_text__with_shared_command_hidden_everywhere.snap
---
source: src/commands.rs
expression: "reg.help_text(&HelpVisibility::all().hide_command(\"status\"))"
---
Available Commands:

/help - Show this help message

*Monitoring:*

/uptime - Show uptime

*Admin commands:*

/restart - Restart the bot
