src/snapshots/threema_gateway_bot__commands__tests__help_text__with_shared_command_hidden_section.snap
---
source: src/commands.rs
expression: "reg.help_text(&HelpVisibility::all().hide_group(\"admin\"))"
---
*Available Commands:*

*/help* - _Show this help message_

Monitoring:

*/uptime* - _Show uptime_
*/status* - _Show system status_
